web/src/components/AQB/aqb.module.css
@import '../../styles/custom-media.css';
@import '../../styles/custom-properties.css';

.bawhWrapper{
   display: block;
   position: relative;
   padding-bottom: calc(var(--space));
}
.bawhWrapper .chapter:first-child{
    margin-top: calc(var(--space) * 2);
}
.chapter iframe{
    width: 100%;
    height: 40vh;
    @media (--media-min-medium) {
        height: 20vw;
    }
}
.chapter{
    position: relative;   
    margin-top:calc(var(--space) * 4);
    /* @media (--media-min-medium) {
        padding:var(--space);
        padding-left:calc(var(--space)*2);
        padding-bottom:0;
      } */
}


.twoUp{
    display: flex;
    flex-direction: column;
    @media (--media-min-medium) {
        flex-direction: row;
    }
}
.twoUp > *{
    flex-basis: 50%;
}
.twoUp img{
  width: 100%;
}
.twoUp .textBox h4{
    margin-top:var(--space);
    @media (--media-min-medium) {
        margin-top: 0;
    }
}

.twoUp .textBox{
    @media (--media-min-medium) {
        padding-left: var(--space);
    }
}
.twoUp.left .textBox{
    padding-left:0;
    padding-right: var(--space);
}
.twoUp.left{
    flex-direction: column-reverse;
    @media (--media-min-medium) {
        flex-direction: row;
    }
}
.oneUp img{
    width: 100%;
}

.yomWrapper .textBox .button{
    color: var(--color-black);
  }
  .yomWrapper h1{
    margin-top:0;
  }
.yomWrapper{
    background-color: var(--color-black);
    color: var(--color-white);
    margin-top:calc(var(--space) * 2);
    padding-bottom: calc(var(--space) * 3);
    padding-top: calc(var(--space) * 3);
}
.yomWrapper .textBox a{
    color: var(--color-blue);
}
/* .yomWrapper .textBox .button:hover{
    color: var(--color-white);
  } */
.yomWrapper .chapter:nth-child(1){
    padding-top:0;
    margin-top:0;
}
.yomWrapper audio{
  margin: var(--space) 0;
}
.resourceWrapper{
    background-color: var(--color-light-blue);
    padding-bottom: calc(var(--space)*2);
    padding-top: calc(var(--space) * 3);
    margin-top: calc(var(--space) * 3);
}
.resourceWrapper .chapter{
    margin-top:0;
}
.resourceWrapper a{
    color:var(--color-dark-blue);
    font-family: var(--font-family-bold);
    text-decoration: none;
}
.resourceWrapper ul{
    list-style: none;
    padding:0;
}
.resourceWrapper ul li{
    margin-bottom: calc(var(--small-space) * 3);
}
.resourceWrapper h4{
    margin:0;
}
.resourceWrapper a:hover{
    color:var(--color-red);
}

